--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Foxer</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MWSLF3XQ63"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MWSLF3XQ63');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
