made foxer installable on device

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#020617" />
 <meta
   name="description"
-  content="Foxer is a simple and smooth task manager designed for calm productivity."
+  content="Foxer is a task app that works offline, needs no login, and keeps your to-dos calm, clear, and easy to manage every day."
 />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
